# rust-lzma

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: test.yml
src/: error.rs  lib.rs  lzma_stream_wrapper.rs  lzma_sys.rs  reader.rs  writer.rs
tests/: test.rs  test_file.lzma
