[package]
name = "rust-lzma"
version = "0.1.1"
authors = ["fpgaminer <fpgaminer@bitcoin-mining.com>"]
description = "Simple interface for LZMA compression and decompression."
documentation = "https://fpgaminer.github.io/doc/lzma/"
repository = "https://github.com/fpgaminer/rust-lzma"
readme = "README.md"
keywords = ["lzma", "compression", "decompression", "xz", "liblzma"]
license = "MIT"
build = "build.rs"

[lib]
name = "lzma"

[dependencies]
libc = "^0.2"

[build-dependencies]
pkg-config = "^0.3"
